# rate

./: .env  CMakeLists.txt  README.md  rate-app.schema.json  rate.cpp  rate.functions.json  rate.schema.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  supervisord.conf
.devcontainer/smtpd/src/config/: rated.yaml  smtpd-app.yaml  smtpd.yaml
.devcontainer/smtpd/src/files/: test.hsl
.devcontainer/smtpd/src/hooks/eod/: default.hsl
